change profil pic

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="col-lg-6">
 							<div class="home_left_img">
 								<div class= "image-card">
-									<img src="../img/banner/person.png" alt="">
+									<img src="../img/banner/person_final.png" alt="">
 								</div>
 							</div>
 						</div>
