cleaned up front page and backend

--- a/index.html
+++ b/index.html
@@ -41,17 +41,10 @@
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="#welcome">About Me</a></li>
 								<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/arushisomani/">LinkedIn</a>
-								<li class="nav-item submenu dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects</a>
-									<ul class="dropdown-menu">
-										<li class="nav-item"><a class="nav-link" href="portfolio.html">Current Projects</a></li>
-										<li class="nav-item"><a class="nav-link" href="portfolio-details.html">Previous Projects</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="https://github.com/somaniarushi">GitHub</a></li>
-									</ul>
-								</li> 
-                                <li class="nav-item active"><a class="nav-link" href="index.html">Blog</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="index.html">Resume</a></li>
-								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.github.com/somaniarushi/">Github</a>
+                                <li class="nav-item active"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="resume.pdf">Resume</a></li>
+								<li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
 							</ul>
 						</div> 
 					</div>
@@ -169,18 +162,18 @@
         </section>
         
         <!--================Footer Area =================-->
-        <footer class="footer_area p_120">
+        <footer class="footer_area p_120" id="footer">
         	<div class="container">
-        		<div class="row footer_inner">
-        			<div class="col-lg-5 col-sm-6">
+        		<!-- <div class="row footer_inner"> -->
+        			<!-- <div class="col-lg-5 col-sm-6"> -->
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
         						<h3>Connect With Me</h3>
         					</div>
-        					<p> <strong>Email: </strong>arushisomani@berkeley.edu </p>
+        					<p> arushisomani@berkeley.edu </p>
         				</aside>
-        			</div>
-        		</div>
+        			<!-- </div> -->
+        		<!-- </div> -->
         	</div>
         </footer>
         <!--================End Footer Area =================-->
