--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -26,7 +26,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container box_1620">
                         <!-- Brand and toggle get grouped for better mobile display -->
-                        <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+                        <a class="navbar-brand logo_h" href="index.html"><img src="imgg/logo.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -35,23 +35,18 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                             <ul class="nav navbar-nav menu_nav ml-auto">
-                                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
-                                <!--<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li>-->
-                                <li class="nav-item"><a class="nav-link" href="services.html">Achievements</a>
+                                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/arushisomani/">LinkedIn</a>
                                 <li class="nav-item submenu dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects</a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item"><a class="nav-link" href="portfolio.html">Current Projects</a></li>
                                         <li class="nav-item"><a class="nav-link" href="portfolio-details.html">Previous Projects</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="https://github.com/somaniarushi">GitHub</a></li>
                                     </ul>
                                 </li> 
-                                <!--<li class="nav-item submenu dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                                    </ul>
-                                </li> -->
+                                <li class="nav-item active"><a class="nav-link" href="index.html">Blog</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="index.html">Resume</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             </ul>
                         </div> 
@@ -62,7 +57,7 @@
         <!--================Header Menu Area =================-->
         
         <!--================Home Banner Area =================-->
-        <section class="banner_area">
+        <!-- <section class="banner_area">
             <div class="banner_inner d-flex align-items-center">
             	<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
 				<div class="container">
@@ -76,14 +71,14 @@
 					</div>
 				</div>
             </div>
-        </section>
+        </section> -->
         <!--================End Home Banner Area =================-->
 
              <section class="projects_area p_120">
             <div class="container">
                 <div class="main_title">
                     <h2>Recently Completed Projects</h2>
-                    <p>A few small things done, and put smiles on a few faces. In short, a few jobs well done.</p>
+                    <p>Organization and creative efforts from the past, that I believe created some positive impact. </p>
                 </div>
 
                 <!--<div class="projects_fillter">
@@ -181,36 +176,60 @@
                     </div>
                 </div>
             </div>
+        </section> 
+
+
+
+        <section class="feature_area p_120">
+             <div class="container">
+                <div class="main_title">
+                    <h2>Recently Completed Projects</h2>
+                    <p>Organization and creative efforts from the past, that I believe created some positive impact. </p>
+                </div>
+                <div class="feature_inner row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item_1">
+                            <!--<i class="flaticon-city"></i>-->
+                            <h4>Founder and President</h4>
+                            <p> Lazarus Technical Society<br><br> Leader of a team of 100 people. Head of design, webmaster, social media organizer and technical budget treasurer. Raised over INR 2,000,000 and handled a participation of 600+ delegates.</p>
+                        </div>
+                    </div>
+                <div class="feature_inner row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item_1">
+                            <!--<i class="flaticon-city"></i>-->
+                            <h4>Chief Technical Officer</h4>
+                            <p>Jaipuria Model United Nations 2018. <br><br> Leader of a team of 100 people. Head of design, webmaster, social media organizer and technical budget treasurer. Raised over INR 2,000,000 and handled a participation of 600+ delegates.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item_1">
+                            <!--<i class="flaticon-skyline"></i>-->
+                            <h4>Old Age Home Letters</h4>
+                            <p>Eldery folk are often forgotten by society. I've recently realized how lonely they often get. I'm attempting to set up a portal which would allow people to send the eldery messages, which would be printed, read out or messaged over to them, as per their preference.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item_1">
+                            <!--<i class="flaticon-sketch"></i>-->
+                            <h4>VR Drum Kit</h4>
+                            <p>Pushing the boundaries of music by implementing this instrument virtually through Oculus VR. Making the drums an instrument you can travel with, and making the drum an instrument anyone from any economic group can learn without financial hardship.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="feature_item_1">
+                            <!--<i class="flaticon-sketch"></i>-->
+                            <h4>Avadh Media Manager</h4>
+                            <p>Managing the social media and reforming the website for Avadh Hospitals, Lucknow, to make it more interactive and optimise it. My intent is to make people more aware of the blood drives and camps the hospital does weekly. </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                    </div>
+                </div>
+            </div>
         </section>
-        
-        <!--================Portfolio Details Area =================-->
-        <!--<section class="portfolio_details_area p_120">
-        	<div class="container">
-        		<div class="portfolio_details_inner">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="left_img">
-								<img class="img-fluid" src="img/gallery/portfolio_details.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="portfolio_right_text">
-								<h4>Lavendar ambient colorlib</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-								<ul class="list">
-									<li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
-									<li><span>Client</span>:  colorlib</li>
-									<li><span>Website</span>:  colorlib.com</li>
-									<li><span>Completed</span>:  17 Aug 2018</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-       				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-       				<p>Voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-        		</div>
-        	</div>
-        </section>-->
         <!--================End Portfolio Details Area =================-->
                                 <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
        <!--================Footer Area =================-->
